--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="javascript/navBar.js"></script>
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/core.css">
@@ -20,18 +21,18 @@
         <div class="nav_bar_actions">
             <img class = "nav_bar_icon" src="pics/web_icon.png">
             <div class = "left_buttons">
-                <ul class="nav_bar_button"><a href="Login.html">Login</a></ul>
-                <ul class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
+                <ul id="login_button" class="nav_bar_button"><a href="Login.html">Login</a></ul>
+                <ul id="signup_button" class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
             </div>
             <div class="center_buttons">
-                <ul class="nav_bar_button"><a href="index.html">Home</a></ul>
-                <ul class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
-                <ul class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
-                <ul class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
+                <ul id="index_button" class="nav_bar_button"><a href="index.html">Home</a></ul>
+                <ul id="viewall_button" class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
+                <ul id="borrow_book_button" class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
+                <ul id="add_book_button" class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
             </div>
             <div class ="right_buttons">
-                <ul class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
-                <ul class="nav_bar_button"><a href="About.html">About Us</a></ul>
+                <ul id="profile_button" class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
+                <ul id="aboutus_button" class="nav_bar_button"><a href="About.html">About Us</a></ul>
             </div>
         </div>
 
