--- a/BookPage.html
+++ b/BookPage.html
@@ -5,65 +5,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="pics/web_icon.png">
-    <title>The Redshirt | EgyBooks</title>
+    <link rel="stylesheet" href="css/core.css">
+    <link rel="stylesheet" href="css/BookPage.css">
+    <link rel="stylesheet" href="css/nav_bar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
+    <title>Clean Code | EgyBooks</title>
 </head>
 
 <body>
 
     <!--Nav bar-->
-    <a class="active" href="Login.html">Login</a>
-    <span>/</span>
-    <a href="Signup.html">Sign Up</a>
-    <a href="index.html">Home</a>
-    <a href="About.html">About Us</a>
-    <a href="ViewBooks.html">View all</a>
-    <a href="BorrowBook.html">Borrow Book</a>
-    <a href="AddBook.html">Add Book</a>
-    <a href ="Profile.html">Profile</a>
-
-    <!--Search bar-->
-    <form action="search" method="GET">
-        <input type="text" name="search" placeholder="Search">
-        <select name="filter">
-            <option value="title">Title</option>
-            <option value="author">Author</option>
-            <option value="category">Category</option>
-        </select>
-        <button type="submit">Search</button>
-    </form>
+    <div class = "nav_bar">
+        <!--Nav bar actions-->
+        <div class="nav_bar_actions">
+            <img class = "nav_bar_icon" src="pics/web_icon.png">
+            <div class = "left_buttons">
+                <ul class="nav_bar_button"><a href="Login.html">Login</a></ul>
+                <ul class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
+            </div>
+            <div class="center_buttons">
+                <ul class="nav_bar_button"><a href="index.html">Home</a></ul>
+                <ul class="nav_bar_button"><a href="ViewBooks.html">View all</a></ul>
+                <ul class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
+                <ul class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
+            </div>
+            <div class ="right_buttons">
+                <ul class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
+                <ul class="nav_bar_button"><a href="About.html">About Us</a></ul>
+            </div>
+        </div>
     
-    <hr></hr>
-
-    <img align="left" alt="The book preface" width="400" height="600"
-    src="pics/clean code image.jpg">
-    <h2>Clean Code</h2>
-    <h5>Category :</h5>
-    <h2>Education</h2>
-    <h5>Author :</h5>
-    <h2>Robert C.Martin</h2>
-    <p>
-        Even bad code can function. But if code isn’t clean, it can bring a development 
-        organization to its knees. Every year, countless hours and significant resources 
-        are lost because of poorly written code. But it doesn’t have to be that way.
-    </p>
-    <h2>About the Book :</h2>
-    <h5>Edition : 1st edition</h5>
-    <h5>Publisher : Pearson</h5>
-    <h5>Publishing Date : 2008</h5>
-    <h5>Number of Pages : 462 page</h5>
-    <h5>ISBN-code : 9988759761359</h5>
-    <h2>About the author :</h2>
-    <p>
-        Martin has authored many books and magazine articles. 
-        He was the editor-in-chief of C++ Report magazine 
-        and served as the first chairman of the Agile Alliance.
-    </p>
-    <button><a href="BorrowBook.html" target="_blanc">Borrow</a></button>
-    <button><a href="EditBook.html" target="_blanc">Edit</a></button>
-    <input type="button" onclick="alert('Are you sure you want to delete this book?')" value="Delete">
-    <h3>Share your Opinion</h3>
-    <textarea placeholder="Put you Comment here!"></textarea>
-    <button>Comment</button>
+        <!--Search bar-->
+        <div class="search_bar">
+            <form action="search" method="GET">
+                <div class="search_input_container">
+                    <input type="text" name="search" placeholder="Search" class="input">
+                    <svg class="search_icon" fill="#000000" width="20px" height="20px" viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z" fill-rule="evenodd"></path>
+                    </svg>
+                    <select name="filter" class="filter">
+                        <option value="title">Title</option>
+                        <option value="author">Author</option>
+                        <option value="category">Category</option>
+                    </select>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="book">
+        <div>
+            <img class="bookimg" alt="The book preface" src="pics/clean code image.jpg">
+        </div>
+        <div class="bookdef">
+            <h1>Clean Code</h1>
+            <h2>Category : Education </h2>
+            <h2>Author : Robert C.Martin </h2>
+            <p>
+                Even bad code can function. But if code isn’t clean, it can bring a development 
+                organization to its knees. Every year, countless hours and significant resources 
+                are lost because of poorly written code. But it doesn’t have to be that way.
+            </p>
+            <h2>About the Book :</h2>
+            <h5>Edition : 1st edition</h5>
+            <h5>Publisher : Pearson</h5>
+            <h5>Publishing Date : 2008</h5>
+            <h5>Number of Pages : 462 page</h5>
+            <h5>ISBN-code : 9988759761359</h5>
+            <h2>About the author :</h2>
+            <p>
+                Martin has authored many books and magazine articles. 
+                He was the editor-in-chief of C++ Report magazine 
+                and served as the first chairman of the Agile Alliance.
+            </p>
+        </div>
+    </div>
+    <div>
+        <div class="btns">
+            <div>
+                <button class="borrow"><a class="btnword" href="BorrowBook.html" target="_blanc">Borrow</a></button>
+                <button class="edit"><a class="btnword" href="EditBook.html" target="_blanc">Edit</a></button>
+                <input class="delete" type="button" onclick="alert('Are you sure you want to delete this book?')" value="Delete">
+            </div>
+            <div>
+                <h3 class="commentword">Share your Opinion</h3>
+                <textarea class="commentbox" placeholder="Put you Comment here!"></textarea>
+            </div>
+            <div>
+                <button class="commentbtn">Comment</button>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
