--- a/EditProfile.html
+++ b/EditProfile.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="javascript/navBar.js"></script>
+        <script src="javascript/editprofile.js"></script>
         <link rel="icon" type="image/png" href="pics/web_icon.png">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/core.css">
@@ -56,7 +57,7 @@
 
                             <div class="inputField">
                                 <label for="confirm password">Confirm password:</label>
-                                <input type="password" required id="confirm password" name="confirm password" placeholder="Re-enter password">
+                                <input type="password" required id="confirm_password" name="confirm password" placeholder="Re-enter password">
                             </div>
 
                             <div class="inputField">
