--- a/BorrowBook.html
+++ b/BorrowBook.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript/navBar.js"></script>
+    <script src="javascript/borrowBook.js"></script>
     <link rel="icon" type="image/png" href="pics/web_icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/core.css">
@@ -16,11 +17,11 @@
 
 <body>
     <!--Nav bar-->
-    <div class = "nav_bar">
+    <div class="nav_bar">
         <!--Nav bar actions-->
         <div class="nav_bar_actions">
-            <img class = "nav_bar_icon" src="pics/web_icon.png">
-            <div class = "left_buttons">
+            <img class="nav_bar_icon" src="pics/web_icon.png">
+            <div class="left_buttons">
                 <ul id="login_button" class="nav_bar_button"><a href="Login.html">Login</a></ul>
                 <ul id="signup_button" class="nav_bar_button"><a href="Signup.html">Sign Up</a></ul>
             </div>
@@ -30,7 +31,7 @@
                 <ul id="borrow_book_button" class="nav_bar_button"><a href="BorrowBook.html">Borrow Book</a></ul>
                 <ul id="add_book_button" class="nav_bar_button"><a href="AddBook.html">Add Book</a></ul>
             </div>
-            <div class ="right_buttons">
+            <div class="right_buttons">
                 <ul id="profile_button" class="nav_bar_button"><a href="Profile.html">Profile</a></ul>
                 <ul id="aboutus_button" class="nav_bar_button"><a href="About.html">About Us</a></ul>
             </div>
@@ -39,7 +40,7 @@
 
     <div class="container">
         <header>Borrow Book</header>
-        <form action="#">
+        <form method="post">
             <div class="form">
                 <div class="bookDetails">
                     <span class="title">Book Details</span>
@@ -51,94 +52,73 @@
                         </div>
 
                         <div class="inputField">
-                            <label for="author">Author</label>
-                            <input id="author" type="text" name="author" placeholder="Author" required maxlength="10">
+                            <label for="book_author">Author</label>
+                            <input id="book_author" type="text" name="author" placeholder="Author" required maxlength="50">
                         </div>
 
                         <div class="inputField">
                             <label for="quan">Quantity</label>
-                            <input id="quan" type="number" name="quan" required min="1" max="3" step="1" value="1">
+                            <input id="quan" type="number" name="quan" required value="1">
                         </div>
 
-                        <div class="inputFieldli">
+                        <div class="inputField">
                             <label for="bk_tit">Book Title</label>
-                            <select id="bk_tit" name="bk_tit" required>
-                                <optgroup label="Islamic Books">
-                                    <option value="1">صحيح البخاري</option>
-                                    <option value="2">رياض الصالحين</option>
-                                    <option value="3">التفسير الميسر</option>
-                                </optgroup>
-                    
-                                <optgroup label="Programming Books">
-                                    <option value="4">Problem Solving with C++</option>
-                                    <option value="5">introduction_to_Algorithms_3rd</option>
-                                    <option value="6">Data Structures and Algorithm Analysis in C++</option>
-                                    <option value="7">Fundamentals of Database Systems 6th Edition - Ramez Elmasry</option>
-                                    <option value="8">Head_First_Object-Oriented_Analysis_Design</option>
-                                </optgroup>
-                    
-                                <optgroup label="Cyber Security Books">
-                                    <option value="9">Linux_Basics_for_Hackers_Getting_Started_with_Networking,_Scripting</option>
-                                    <option value="10">Getting_Started_Becoming_a_Master_Hacker_Hacking_is_the_Most_Important</option>
-                                    <option value="11">Penetration Testing A Hands-On Introduction to Hacking</option>
-                                    <option value="12">The Complete Cyber Security Course, Volume 1 Hackers Exposed</option>
-                                </optgroup>
-                                </select>
+                            <input id="bk_tit" type="text" name="bk_tit" placeholder="Enter Book Title">
                         </div>
 
                         <div class="avaCheck">
-                            <button class="btn">Check Availability</button>
+                            <button type="button" class="btn" id="btn">Check Availability</button>
                         </div>
 
                     </div>
                 </div>
                 <br>
-                <div class="personlaDetails">
+                <div class="personalDetails">
                     <span class="title">Personal Details</span>
 
                     <div class="fields">
 
                         <div class="inputField">
                             <label for="f_name">First Name</label>
-                            <input id="f_name" type="text" placeholder="Enter your first name" name="f_name" required maxlength="10">
+                            <input id="f_name" type="text" placeholder="Enter your first name" name="f_name" required maxlength="50">
                         </div>
 
                         <div class="inputField">
                             <label for="m_name">Middle Name</label>
-                            <input id="m_name" type="text" required placeholder="Enter your middle name" name="m_name" maxlength="10">
+                            <input id="m_name" type="text" placeholder="Enter your middle name" name="m_name" maxlength="50">
                         </div>
 
                         <div class="inputField">
                             <label for="l_name">Last Name</label>
-                            <input id="l_name" type="text" required placeholder="Enter your last name" name="l_name" maxlength="10">
+                            <input id="l_name" type="text" placeholder="Enter your last name" name="l_name" required maxlength="50">
                         </div>
 
                         <div class="inputField">
                             <label for="mail">Email</label>
-                            <input id="mail" type="email" required placeholder="Enter your email" name="mail" maxlength="25">
+                            <input id="mail" type="email" placeholder="Enter your email" name="mail" required maxlength="50">
                         </div>
 
                         <div class="inputField">
                             <label for="ph_no">Phone Number</label>
-                            <input id="ph_no" type="text" required placeholder="Enter your phone number" name="ph_no" maxlength="13">
+                            <input id="ph_no" type="text" placeholder="Enter your phone number" name="ph_no" required maxlength="50">
                         </div>
 
                         <div class="inputField">
-                            <label for="add">Delivery Addresss</label>
-                            <input id="add" type="text" required placeholder="Enter delivery address" name="add" maxlength="25">
+                            <label for="add">Delivery Address</label>
+                            <input id="add" type="text" placeholder="Enter delivery address" name="add" required maxlength="100">
                         </div>
 
                         <div class="inputField">
                             <label for="delivered_date">Delivery Date</label>
-                            <input id="delivered_date" type="date" required name="delivered_date">
+                            <input id="delivered_date" type="date" name="delivered_date" required>
                         </div>
 
                         <div class="submit">
-                            <input type="submit" name="Submit" required>
+                            <input type="submit" name="Submit" value="Submit" required>
                         </div>
 
                         <div class="reset">
-                            <input type="reset" name="Reset">
+                            <input type="reset" name="Reset" value="Reset">
                         </div>
 
                     </div>
